# data-pruning-sysid

./: .gitignore  README.md  plot_atom.py  plot_batch.py  plot_box.py  plot_density.py  plot_errorbar.py  plot_pca.py  plot_phase_portraits.py  plot_prediction.py  plot_redundancy.py  plot_sample.ipynb  plot_sample.py  plot_sample2.py  plot_sample_simple.ipynb  print_terms.py  pyproject.toml  run_dsed-eq.sh  run_dsed-tr.sh  run_dsed.sh  run_dsed_eq.sh  run_dsed_tr.sh  run_emps.sh  run_whbm.sh  utils.py
