[project]
name = "data-pruning-sysid"
version = "0.1.0"
description = "Data pruning for system identification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "fastcan",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nonlinear-benchmarks>=1.0.0",
]

[dependency-groups]
dev = ["black>=24.10.0", "mypy>=1.13.0", "ruff>=0.7.2"]

[tool.uv.sources]
fastcan = { git = "https://github.com/scikit-learn-contrib/fastcan" }

[tool.black]
line-length = 88
target-version = ['py312', 'py313']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | \.venv
  | \.ruff_cache
  | build
  | dist
)/
'''

[tool.ruff]

# max line length for black
line-length = 88
target-version = "py312"
exclude = [".git", "__pycache__", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # E721 is in preview (july 2024) and gives many false positives.
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
    # F841 is in preview (july 2024), and we don't care much about it.
    # Local variable ... is assigned to but never used
    "F841",
]
